2015-08-21 Martin Grønholdt

* net/wifi.c (create_softap): Start from default configuration.
* slighttp/http-request.* (http_free_request): Parameter type changed to struct http_request).


2015-08-20 Martin Grønholdt

* net/wifi.c (wifi_config_mode): Do a disconnect.
* tools/dl_list.h: Better docs.
* net/tcp.c (listening_connection): Renamed listening_connections.
			(tcp_cb_connection): Removed.
* net/tcp.h (tcp_connection.free): Renamed to user.
			(tcp_connection): Added call backs.
			(TCP_MAX_CONNECTIONS): Removed.
			(TCP_SEND_BUFFER_SIZE): Removed.
			(tcp_callback_funcs): Added.
* net/wifi_connect.*: Renamed wifi.*
* user_main.c: Added disconnected.
* slighttp/http.*: Added http_get_status.


2015-08-19 Martin Grønholdt

* user_main.c (user_init): Do not disable auto connect.
						 : Changes for keeping up with the wifi code.
* net/wifi_connect.c: Added wifi_handle_event.
					  Added wifi_init.
					  (wifi_connect): Renamed to wifi_connect_default.
					  (wifi_connect_default) Returns bool for status.
* net/wifi_connect.h: Added wifi_init- 
					  (wifi_connect): Removed.
* fs/connect/index.html: Bad characters had invaded the file.


2015-07-29 Martin Grønholdt

* slighttp/http-mime.*: Added ICO.


2015-07-28 Martin Grønholdt

* fs: Reworked most HTML and CSS to use only my customisations and normalize.
* fs/css/custom.css: Added with CSS customisations.
* fs/js/atomic.min.js: Added content type parameter.


2015-07-27 Martin Grønholdt

* fs/*.html: Added HTML tag.
* fs/css: Added skeleton and normalize.
* fs/css/skeleton.css: Changed base font to Georgia, serif.

2015-07-25 Martin Grønholdt

* slighttp/http-common.c (http_print_clf_status): Proper type in format string.
* user_main.c (status_check): Adjustments for staticly allocated send buffer.
* slighttp/http-tcp.c (tcp_connect_cb): Adjustments for staticly allocated send buffer.
* slighttp/http_response.c: Adjustments for staticly allocated send buffer.